[package]
name = "persistent-buff"
version = "0.1.0"
edition = "2021"
authors = ["xgroleau <xgroleau@gmail.ca>"]
repository = "https://github.com/xgroleau/persistent-buff"
license = "MIT OR Apache-2.0"
homepage= "https://github.com/xgroleau/persistent-buff"
description = "A buffer that stays persistent in ram between boots"
documentation = "https://docs.rs/persistent-buff"
readme = "README.md"
keywords = ["no-std", "persistent"]
categories = ["embedded", "no-std"]
rust-verison = "1.56.1"

exclude = [
    "flake.nix",
    "flake.lock",
    ".envrc",
]


[dev-dependencies]
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
